--- a/package.json
+++ b/package.json
@@ -25,11 +25,18 @@
   },
   "dependencies": {
     "@devvit/web": "0.12.0",
+    "@types/d3": "^7.4.3",
+    "@types/jest": "^30.0.0",
     "clsx": "2.1.1",
+    "d3": "^7.9.0",
+    "dayjs": "^1.11.18",
     "devvit": "0.12.0",
     "express": "5.1.0",
+    "jest": "^30.1.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-router-dom": "^7.8.2",
+    "string-similarity-js": "^2.1.4",
     "tailwind-merge": "3.3.0"
   },
   "devDependencies": {
