--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -3,8 +3,10 @@
   "extends": "../../tools/tsconfig-base.json",
   "compilerOptions": {
     "lib": ["ES2023"],
+    "esModuleInterop": true,
+    "target": "ES2015",
 
-    "types": ["node"],
+    "types": ["node", "jest"],
 
     "rootDir": ".",
 
@@ -14,6 +16,5 @@
   },
   // https://github.com/Microsoft/TypeScript/issues/25636
   "include": ["**/*", "**/*.json", "../../package.json"],
-  "exclude": ["**/*.test.ts"],
   "references": [{ "path": "../shared" }]
 }
