--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jest": "^30.1.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.8.2",
     "string-similarity-js": "^2.1.4",
     "tailwind-merge": "3.3.0"
