All issues from the code audit have been successfully fixed, including the compilation errors that arose during the process.

--- a/src/client/public/manifest.json
+++ b/src/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Consensus Reality Monitor",
-  "short_name": "CRM-1970",
+  "short_name": "Consensus Reality Monitor",
   "description": "Monitor and analyze consensus realities",
   "start_url": "/",
   "display": "standalone",
