--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   // Only build references.
+  "compilerOptions": {
+    "noEmit": true
+  },
   "files": [],
   "references": [{ "path": "./src/client" }, { "path": "./src/shared" }, { "path": "./src/server" }]
 }
