--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,5 @@
   "singleQuote": true,
   "trailingComma": "es5",
   "quoteProps": "preserve",
-  "plugins": []
+  "plugins": ["./node_modules/prettier-plugin-tailwindcss"]
 }
