--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "license": "BSD-3-Clause",
   "type": "module",
   "scripts": {
-    "postinstall": "npm run build",
     "build:client": "cd src/client && vite build",
     "build:server": "cd src/server && vite build",
     "build": "npm run build:client && npm run build:server",
@@ -21,18 +20,17 @@
     "login": "devvit login",
     "launch": "npm run build && npm run deploy && devvit publish",
     "prettier": "prettier-package-json --write ./package.json && prettier --write .",
+    "test": "vitest run",
     "type-check": "tsc --build"
   },
   "dependencies": {
     "@devvit/web": "0.12.0",
     "@types/d3": "^7.4.3",
-    "@types/jest": "^30.0.0",
     "clsx": "2.1.1",
     "d3": "^7.9.0",
     "dayjs": "^1.11.18",
     "devvit": "0.12.0",
     "express": "5.1.0",
-    "jest": "^30.1.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
@@ -60,6 +58,7 @@
     "typescript": "5.8.2",
     "typescript-eslint": "8.29.0",
     "vite": "6.2.4",
-    "vitest": "3.1.1"
+    "vitest": "3.1.1",
+    "jsdom": "^20.0.0"
   }
 }
