--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -2,7 +2,7 @@
 {
   "extends": "../../tools/tsconfig-base.json",
   "compilerOptions": {
-    "lib": ["ES2023"],
+    "lib": ["ES2015"],
     "esModuleInterop": true,
     "target": "ES2015",
 
@@ -15,6 +15,6 @@
     "tsBuildInfoFile": "../../dist/tsconfig.tsbuildinfo"
   },
   // https://github.com/Microsoft/TypeScript/issues/25636
-  "include": ["**/*", "**/*.json", "../../package.json"],
+  "include": ["**/*", "**/*.json"],
   "references": [{ "path": "../shared" }]
 }
