--- a/src/shared/tsconfig.json
+++ b/src/shared/tsconfig.json
@@ -2,7 +2,7 @@
 {
   "extends": "../../tools/tsconfig-base.json",
   "compilerOptions": {
-    "lib": ["WebWorker", "ES2023"],
+    "lib": ["ES2023"],
 
     "outDir": "../../dist/types/shared",
 
