--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dayjs": "^1.11.18",
     "devvit": "0.12.0",
     "express": "5.1.0",
+    "express-rate-limit": "^8.1.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
@@ -51,6 +52,7 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
     "globals": "15.15.0",
+    "jsdom": "^20.0.0",
     "prettier": "3.5.3",
     "prettier-package-json": "2.8.0",
     "prettier-plugin-tailwindcss": "0.6.11",
@@ -58,7 +60,6 @@
     "typescript": "5.8.2",
     "typescript-eslint": "8.29.0",
     "vite": "6.2.4",
-    "vitest": "3.1.1",
-    "jsdom": "^20.0.0"
+    "vitest": "3.1.1"
   }
 }
