--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "type-check": "tsc --build"
   },
   "dependencies": {
+    "@devvit/server": "^0.12.0",
     "@devvit/web": "0.12.0",
     "@types/d3": "^7.4.3",
     "clsx": "2.1.1",
     "d3": "^7.9.0",
     "dayjs": "^1.11.18",
     "devvit": "0.12.0",
-    "express": "5.1.0",
+    "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -42,7 +43,7 @@
   "devDependencies": {
     "@eslint/js": "9.23.0",
     "@tailwindcss/vite": "4.1.6",
-    "@types/express": "5.0.1",
+    "@types/express": "^5.0.1",
     "@types/react": "19.1.4",
     "@types/react-dom": "19.1.5",
     "@vitejs/plugin-react": "4.4.1",
