--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "typescript": "5.8.2",
     "typescript-eslint": "8.29.0",
     "vite": "6.2.4",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "vitest": "3.1.1"
   }
 }
